--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
 
 <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Rock+Salt" />
  <meta name="viewport" content="width=device-width, initial-scale=1">
 
